fixes nav not collapsing on link click, adds contact controller and php

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -411,7 +411,6 @@ a {
 	padding-bottom: 10px;
 	color: #ff8533;
 	text-align: center;
-	font-family: "bite-the-bullet", sans-serif;
 	
 }
 
